# a-cordes

./: .gitignore  Dockerfile  Makefile  README.md  deploy.sh  docker-compose-test.yaml  docker-compose.yaml  requirements.txt
.envs/: .env.dev
.github/workflows/: ci.yml
a-cordes-frontend/: package (DESKTOP-AP6H1C6's conflicted copy 2021-09-11).json  package-lock.json  package.json
a-cordes-frontend/src/: App.js  index.css  (+1 more)
a_cordes/: Dockerfile  db.sqlite3  manage.py  requirements.txt
a_cordes_backend/: db.sqlite3  manage.py
acordes/: Dockerfile  Dockerfile.dev  drizzle.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
api/: .dockerignore  .env-template  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
api/apps/accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
api/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_dealer.py
api/apps/accounts/tests/: conftest.py  test_models.py  test_views.py
api/config/: settings.py  urls.py
api/scripts/: entrypoint.sh
api/src/: alembic.ini  main.py
api/src/config/: db.py  settings.py
api/src/migrations/: env.py
api/src/routers/: healthcheck.py
frontend/: .env.development  .env.production  Dockerfile  Dockerfile.dev  jsconfig.json  next.config.js  package-lock.json  package.json  store.js  tailwind.config.js
frontend_old/: package-lock.json  package.json
k8s-chart/: .helmignore  values.yaml
nginx/: default.conf
scripts/: build-images.sh  deploy.sh  deploy_nginx_gunicorn.sh  entrypoint.sh
(+447 files in other folders)
